[project]
name = "pydc-auth"
authors = [
    {name="Makarand Bhonsle"}
]
version = "0.1.0"
description = "JWT Beaer Auth client for generating Salesforce Data Cloud Bearer Access Token"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
    "tenacity>=9.0.0"
]

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"